css/style.css
@import url("https://fonts.googleapis.com/css?family=Kalam");
@keyframes block1 {
  0% {
    transform: rotateZ(150deg);
  }
  100% {
    transform: rotateZ(510deg);
  }
}
@keyframes block2 {
  0% {
    transform: rotateZ(130deg);
  }
  100% {
    transform: rotateZ(490deg);
  }
}
@keyframes block3 {
  0% {
    transform: rotateZ(110deg);
  }
  100% {
    transform: rotateZ(470deg);
  }
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

body {
  color: #fefefe;
  font-family: 'Kalam', cursive;
  font-size: 16px;
  line-height: 2em;
  margin: 0;
  position: relative;
}

body,
main {
	height: 100vh;
  width: 100%;
}

h1 {
  margin: 1em 0 0;
  font-size: 3.2em;
}

h2 {
	font-size: 2.5em;
}

p {
  font-size: 1.5em;
  margin: 0;
}

a {
  color: #fefefe;
  text-decoration: none;
  outline: 0;
  transition: all .4s ease-out;
}

main > .bg {
  background: #11B382;
  width: inherit;
  height: inherit;
  display: block;
  position: relative;
  overflow: hidden;
}
main > .bg:before, main > .bg:after,
main > .bg > div {
  width: 500%;
  position: absolute;
  left: -150%;
  animation-duration: 10s;
  animation-iteration-count: infinite;
}
main > .bg:before, main > .bg:after {
  content: '';
}
main > .bg:before {
  background: #608888;
  height: 300%;
  top: 120%;
  animation-name: block1;
}
main > .bg > div {
  background: #1E5166;
  height: 250%;
  top: 100%;
  animation-name: block2;
}
main > .bg:after {
  background: #CF2C2C;
  height: 200%;
  top: 80%;
  animation-name: block3;
}

.info-card {
  position: absolute;
  top: 50%;
  z-index: 999;
  transform: translateY(-50%);
  background: #323232;
  text-align: center;
  padding: 4em 0;
  width: calc(100% - 4em);
	margin: 0 2em;
}
.info-card > .icon {
  border-radius: 100%;
  display: block;
  height: 12em;
  width: 12em;
  margin: 0 auto;
	border: .4em solid #608888;
  background: #608888 url("../img/icon.png") top center/100% no-repeat;
}
.info-card .colored {
	color: #608888;
}

.social-media {
  display: flex;
  justify-content: center;
  padding: 2em 0 0;
}
.social-media > a {
  width: 2em;
	font-size: 2em;
	display: block;
}
.social-media a:hover:nth-child(1),
.social-media a:focus:nth-child(1) {
  color: #000;
}
.social-media a:hover:nth-child(2),
.social-media a:focus:nth-child(2) {
  color: #24292E;
}
.social-media a:hover:nth-child(3),
.social-media a:focus:nth-child(3) {
  color: #205081;
}
.social-media a:hover:nth-child(4),
.social-media a:focus:nth-child(4) {
  color: #4875B4;
}
.social-media a:hover:nth-child(5),
.social-media a:focus:nth-child(5) {
  color: #1FD662;
}
.social-media a:hover:nth-child(6),
.social-media a:focus:nth-child(6) {
  color: #BA0000;
}
.social-media a:hover:nth-child(7),
.social-media a:focus:nth-child(7) {
  color: #2CA5E0;
}

.link-button {
	display: block;
	margin-top: 1em;
}
.link-button:hover,
.link-button:focus {
	color: #11B382;
}

section {
	min-height: 100vh;
	width: 100%;
	padding: 3em 2em;
	background: #323232;
	border-width: .4em 0;
	border-style: solid;
	border-color: #608888;
	display: flex;
}

.skills-card,
.personal-card {
	width: 100%;
	padding: 2em;
}

.personal-card {
	flex-shrink: 3;
}
.personal-card > h2 > .sub {
	display: block;
	color: #11B382;
	font-size: .4em;
	font-weight: 300;
}
.personal-card > .picture {
	width: 16em;
	height: 16em;
	background: #608888;
	border: .4em solid #608888;
	border-radius: 100%;
	margin: 3em 0;
	position: relative;
	overflow: hidden;
}
.personal-card > .picture > img {
	width: 100%;
	margin-top: -1em;
}

.skills-card {
	flex-shrink: 2;
	min-width: 25em;
	background: #fefefe;
	color: #323232;
}
.skills-card h3 {
	color:  #11B382;
}

footer {
	background: #11B382;
	padding: 1em 2em;
	text-align: center;
}
footer a {
	font-weight: 700;
}

@media (min-width: 800px) {
	section {
		flex-wrap: nowrap;
	}
}

@media (max-width: 799px) {
	section {
		flex-wrap: wrap;
	}
}

